--- a/resources/settings.json
+++ b/resources/settings.json
@@ -1,5 +1,5 @@
 {
-    "Token": "MTA0ODE5NDE3ODA1Nzc3MzEyMA.GaQFse.akwzkPcpoA8bSnKaldqKILvHS-1gd1Ulje-XS8",
+    "Token": "00000aaaa00a000a0a00a0a00a0000a0a00a0a0",
     "Prefix":"_",
     "Status": "",
     "Presences": [
