--- a/resources/settings.json
+++ b/resources/settings.json
@@ -1,12 +1,18 @@
 {
-    "Token": "00000aaaa00a000a0a00a0a00a0000a0a00a0a0",
+    "Token": "",
     "Prefix":".",
-    "Developers":"954212416072343623",
+    "Developers":"",
     "Status": "",
     "Presences": [
         { "type": 3, "name": "Someone who created me!" },
         { "type": 2, "name": "Hello World!" }
     ],
     "Interval": 30,
+    "Colors": {
+        "normal": "#8B898A",
+        "warning": "#FFC107",
+        "danger": "#DC3545",
+        "succes": "#198754"
+    },
     "Language":"id"
 }
