--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "license": "MIT",
   "dependencies": {
     "discord.js": "^14.11.0",
-    "i18n": "^0.15.1"
+    "i18n": "^0.15.1",
+    "mal-scraper": "^2.12.1"
   }
 }
