--- a/resources/settings.json
+++ b/resources/settings.json
@@ -1,18 +1,18 @@
 {
-    "Token": "",
+    "Token": "YOUR-TOKEN-HERE",
     "Prefix":".",
-    "Developers":"",
-    "Status": "",
+    "Developers":"USER-ID-HERE",
+    "Status": "dnd",
     "Presences": [
         { "type": 3, "name": "Someone who created me!" },
         { "type": 2, "name": "Hello World!" }
     ],
-    "Interval": 30,
+    "Interval": 30, // in sec
     "Colors": {
         "normal": "#8B898A",
         "warning": "#FFC107",
         "danger": "#DC3545",
         "succes": "#198754"
     },
-    "Language":"id"
+    "Language":"id" // only ID!
 }
